2006-01-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/dialog_connection.cc:
	* glom/dialog_connection.h:
	* glom/document/document_glom.cc:
	* glom/frame_glom.cc:
	* glom/frame_glom.h: When opening example documents, 
	always save a copy and always create a database, choosing 
	a new unused database name. Mark documents explicitly as examples.
	* glom/glom.glade: Rename Open Example button to 
	New From Example.

2006-01-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/application.h:
	* glom/base_db.cc:
	* glom/base_db.h:
	* glom/document/document_glom.cc:
	* glom/document/document_glom.h:
	* glom/frame_glom.cc:
	* glom/frame_glom.h: Added half-working 
	File / Save As Example menu item, which stores the 
	data  in the .glom file, for use when creating the 
	database from an example.

2006-01-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout.cc:
	* glom/mode_data/dialog_layout_export.cc:
	* glom/mode_data/dialog_layout_export.h:
	* glom/glom.glade: Remove formatting button, 
        so we _always_ export in iso format.
	* glom/filechooser_export.cc:
	* glom/filechooser_export.h: The Define Data Format 
	button now works, though it opens in the background. 
	It now exports only the requested fields.

2006-01-14  Murray Cumming  <murrayc@murrayc.com>

	* glom/frame_glom.cc:
	* glom/frame_glom.h: Add a File/Export menu item, for exporting the found set as 
	comma-separated text. 
	* glom/base_db.cc:
	* glom/base_db.h:
	* glom/box_db_table.cc:
	* glom/box_db_table.h:
	* glom/data_structure/glomconversions.cc:
	* glom/data_structure/layout/layoutitem_field.h:
	* glom/filechooser_export.cc:
	* glom/filechooser_export.h:
	* glom/mode_data/Makefile.am:
	* glom/mode_data/box_data.cc:
	* glom/mode_data/box_data.h:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/notebook_data.cc: